Add entry read endpoint for closed application list
